--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -407,6 +407,7 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -623,11 +624,9 @@ deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 deny 2a0c:5700:3133:1705:be24:11ff:fe58:9714;
 deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 deny 2a0c:5700:3133:1705:be24:11ff:fed0:6ed4;
-deny 2a0c:5700:3133:1705:be24:11ff:fed1:b9d9;
 deny 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 deny 2a0c:5700:3133:4000:be24:11ff:fe07:68d;
 deny 2a0c:5700:3133:4000:be24:11ff:fe3c:6727;
-deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:507:c217:cfff:fe09:cd2d;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:6a41:c13:1337::107;
