--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -203,7 +203,6 @@ allow 176.65.149.100;
 allow 176.65.149.105;
 allow 176.65.149.84;
 allow 176.65.149.87;
-allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
 allow 177.93.140.66;
@@ -967,6 +966,7 @@ allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
+allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -1285,7 +1285,6 @@ allow 2a05:6e02:1108:cc10:6339:bfac:dad1:bc4b;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
-allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
 allow 2a06:1700:0:12::1;
@@ -1647,6 +1646,7 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
