--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -203,7 +203,6 @@ deny 176.65.149.100;
 deny 176.65.149.105;
 deny 176.65.149.84;
 deny 176.65.149.87;
-deny 176.65.149.88;
 deny 176.65.149.96;
 deny 176.97.114.202;
 deny 177.93.140.66;
@@ -967,6 +966,7 @@ deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
 deny 2602:f6f6:2:90f1::1;
 deny 2602:f6f6:2:941d::1;
+deny 2602:f6f6:2:a27::5;
 deny 2602:f6f6:2:ad5c::1;
 deny 2602:f6f6:2:cf34::1;
 deny 2602:f6f6:2:d31a::1;
@@ -1285,7 +1285,6 @@ deny 2a05:6e02:1108:cc10:6339:bfac:dad1:bc4b;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
 deny 2a05:b0c7:67c6::1;
-deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a05:b0c7:6cc4::1;
 deny 2a06:1700:0:12::1;
@@ -1647,6 +1646,7 @@ deny 37.228.129.63;
 deny 37.46.196.22;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.135.24.176;
 deny 38.135.24.30;
 deny 38.135.24.31;
 deny 38.135.24.32;
