--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -478,6 +478,7 @@ set_real_ip_from 185.40.4.64;
 set_real_ip_from 185.40.4.92;
 set_real_ip_from 185.42.170.203;
 set_real_ip_from 185.56.171.94;
+set_real_ip_from 185.62.58.36;
 set_real_ip_from 185.67.82.114;
 set_real_ip_from 185.82.219.109;
 set_real_ip_from 188.239.191.25;
@@ -597,7 +598,6 @@ set_real_ip_from 194.42.196.42;
 set_real_ip_from 194.53.137.102;
 set_real_ip_from 194.53.137.156;
 set_real_ip_from 194.55.167.14;
-set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.246.231.197;
@@ -896,6 +896,7 @@ set_real_ip_from 23.129.64.225;
 set_real_ip_from 23.129.64.99;
 set_real_ip_from 23.137.105.248;
 set_real_ip_from 23.137.248.100;
+set_real_ip_from 23.137.253.109;
 set_real_ip_from 23.137.253.254;
 set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.137.254.244;
@@ -924,7 +925,6 @@ set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
-set_real_ip_from 23.191.200.29;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
@@ -964,6 +964,7 @@ set_real_ip_from 2602:f6f6:2:2634::1;
 set_real_ip_from 2602:f6f6:2:3637::1;
 set_real_ip_from 2602:f6f6:2:90f1::1;
 set_real_ip_from 2602:f6f6:2:941d::1;
+set_real_ip_from 2602:f6f6:2:a27::5;
 set_real_ip_from 2602:f6f6:2:ad5c::1;
 set_real_ip_from 2602:f6f6:2:cf34::1;
 set_real_ip_from 2602:f6f6:2:d31a::1;
@@ -975,6 +976,7 @@ set_real_ip_from 2602:fb54:1400::1d;
 set_real_ip_from 2602:fc24:10:bb36::1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:18:f38f::1;
+set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:524::1;
 set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fccf:100:3::14;
@@ -1179,6 +1181,7 @@ set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:1dc0:caff:f4::bad5;
 set_real_ip_from 2a00:74a0:e000:1003::114;
+set_real_ip_from 2a00:7b80:452:2000::36;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a00:c70:1:185:246:84:179:1;
 set_real_ip_from 2a01:270:9847::1;
@@ -1539,7 +1542,6 @@ set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
-set_real_ip_from 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:a800:11:1:124:198:131:108;
 set_real_ip_from 2a12:a800:11:1:124:198:131:114;
 set_real_ip_from 2a12:a800:11:1:124:198:131:191;
@@ -1641,6 +1643,7 @@ set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.46.196.22;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
+set_real_ip_from 38.135.24.176;
 set_real_ip_from 38.135.24.30;
 set_real_ip_from 38.135.24.31;
 set_real_ip_from 38.135.24.32;
