--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -102,7 +102,7 @@ allow 2001:67c:e60:c0c:192:42:116:216;
 allow 2001:67c:e60:c0c:192:42:116:217;
 allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
-allow 2001:b011:4006:54d6::b;
+allow 2001:b011:4006:f9a1::b;
 allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
@@ -137,6 +137,7 @@ allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
 allow 2602:f6f6:2:dc17::1;
 allow 2602:f915:f:3b43::1;
+allow 2602:fa59:5:915::1;
 allow 2602:fa86:b1:0:7c26:daab:e286:3c5d;
 allow 2602:fa8a:3:a::a;
 allow 2602:fb54:1400::1d;
@@ -416,30 +417,6 @@ allow 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
-allow 2a04:52c0:7000:2::130;
-allow 2a04:52c0:7000:2::131;
-allow 2a04:52c0:7000:2::132;
-allow 2a04:52c0:7000:2::133;
-allow 2a04:52c0:7000:2::134;
-allow 2a04:52c0:7000:2::135;
-allow 2a04:52c0:7000:2::136;
-allow 2a04:52c0:7000:2::137;
-allow 2a04:52c0:7000:2::139;
-allow 2a04:52c0:7000:2::140;
-allow 2a04:52c0:7000:2::141;
-allow 2a04:52c0:7000:2::142;
-allow 2a04:52c0:7000:2::143;
-allow 2a04:52c0:7000:2::145;
-allow 2a04:52c0:7000:2::146;
-allow 2a04:52c0:7000:2::147;
-allow 2a04:52c0:7000:2::148;
-allow 2a04:52c0:7000:2::149;
-allow 2a04:52c0:7000:2::150;
-allow 2a04:52c0:7000:2::151;
-allow 2a04:52c0:7000:2::152;
-allow 2a04:52c0:7000:2::153;
-allow 2a04:52c0:7000:2::154;
-allow 2a04:52c0:7000:2:c149:ef7a:307a:932c;
 allow 2a04:9b85:500::58;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:112:31::1;
