--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -102,7 +102,7 @@ set_real_ip_from 2001:67c:e60:c0c:192:42:116:216;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:217;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:218;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:219;
-set_real_ip_from 2001:b011:4006:54d6::b;
+set_real_ip_from 2001:b011:4006:f9a1::b;
 set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
@@ -137,6 +137,7 @@ set_real_ip_from 2602:f6f6:2:cf34::1;
 set_real_ip_from 2602:f6f6:2:d31a::1;
 set_real_ip_from 2602:f6f6:2:dc17::1;
 set_real_ip_from 2602:f915:f:3b43::1;
+set_real_ip_from 2602:fa59:5:915::1;
 set_real_ip_from 2602:fa86:b1:0:7c26:daab:e286:3c5d;
 set_real_ip_from 2602:fa8a:3:a::a;
 set_real_ip_from 2602:fb54:1400::1d;
@@ -416,30 +417,6 @@ set_real_ip_from 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:123:c6c3::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
-set_real_ip_from 2a04:52c0:7000:2::130;
-set_real_ip_from 2a04:52c0:7000:2::131;
-set_real_ip_from 2a04:52c0:7000:2::132;
-set_real_ip_from 2a04:52c0:7000:2::133;
-set_real_ip_from 2a04:52c0:7000:2::134;
-set_real_ip_from 2a04:52c0:7000:2::135;
-set_real_ip_from 2a04:52c0:7000:2::136;
-set_real_ip_from 2a04:52c0:7000:2::137;
-set_real_ip_from 2a04:52c0:7000:2::139;
-set_real_ip_from 2a04:52c0:7000:2::140;
-set_real_ip_from 2a04:52c0:7000:2::141;
-set_real_ip_from 2a04:52c0:7000:2::142;
-set_real_ip_from 2a04:52c0:7000:2::143;
-set_real_ip_from 2a04:52c0:7000:2::145;
-set_real_ip_from 2a04:52c0:7000:2::146;
-set_real_ip_from 2a04:52c0:7000:2::147;
-set_real_ip_from 2a04:52c0:7000:2::148;
-set_real_ip_from 2a04:52c0:7000:2::149;
-set_real_ip_from 2a04:52c0:7000:2::150;
-set_real_ip_from 2a04:52c0:7000:2::151;
-set_real_ip_from 2a04:52c0:7000:2::152;
-set_real_ip_from 2a04:52c0:7000:2::153;
-set_real_ip_from 2a04:52c0:7000:2::154;
-set_real_ip_from 2a04:52c0:7000:2:c149:ef7a:307a:932c;
 set_real_ip_from 2a04:9b85:500::58;
 set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:112:31::1;
