--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -120,6 +120,7 @@ set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
+set_real_ip_from 130.193.15.79;
 set_real_ip_from 131.72.79.38;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
